fix line break on ProjectDetail page (redo as prior push is wrong)

--- a/label_studio/frontend/src/pages/Projects/Projects.styl
+++ b/label_studio/frontend/src/pages/Projects/Projects.styl
@@ -252,6 +252,7 @@
   &__description-data
     min-height: 6rem
     text-align: justify
+    white-space: pre-line
 
   &__current_user_role
     padding 20px 80px
